--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "font-awesome": "^4.7.0",
     "ngx-quicklink": "^0.2.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
